[gd_scene load_steps=4 format=2]

[ext_resource path="res://Slingshot.gd" type="Script" id=1]
[ext_resource path="res://Slingshot.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 53.6004

[node name="Slingshot" type="Node2D" groups=["Slingshot"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2, -79 )
scale = Vector2( 0.507634, 0.507634 )
texture = ExtResource( 2 )

[node name="LeftLine" type="Line2D" parent="."]
points = PoolVector2Array( 12, -126, -79, -128 )
width = 5.632

[node name="RightLine" type="Line2D" parent="."]
points = PoolVector2Array( -21, -127, -79, -128 )
width = 5.632

[node name="TouchArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchArea"]
position = Vector2( -3, -126 )
shape = SubResource( 1 )

[node name="CenterOfSlingShot" type="Position2D" parent="."]
position = Vector2( -1, -128 )

[node name="Tween" type="Tween" parent="."]

[node name="ShotArc" type="Line2D" parent="."]

[connection signal="input_event" from="TouchArea" to="." method="_on_TouchArea_input_event"]
